--- a/scss/style.scss
+++ b/scss/style.scss
@@ -493,14 +493,14 @@ section.starttext.space.about p {
 /*choose-css-end*/
 /*aboutusbanner-css-end*/
 
-/*reviewsbanner-css-start*/
-section.reviews-section {
+/*reviewsdetail-css-start*/
+section.windsor-banner {
     position: relative;
     height: 450px;
-    background-image: url(../images/reviewsbanner.jpeg);
+    background-image: url(../images/windsorbanner.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: top;
+    background-position: center;
     object-fit: cover;
     margin-top: 50px;
     position: relative;
@@ -514,7 +514,147 @@ section.reviews-section {
         z-index: 0;
     }
 }
-/*reviewsbanner-css-end*/
+section.casinolacleamy-banner {
+    position: relative;
+    height: 450px;
+    background-image: url(../images/casinodulacbanner.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    object-fit: cover;
+    margin-top: 50px;
+    position: relative;
+    &::after {
+        position: absolute;
+        content: '';
+        background-color: rgba(0, 0, 0, 0.50);
+        height: 100%;
+        width: 100%;
+        inset: 0;
+        z-index: 0;
+    }
+}
+section.niagara-banner {
+    position: relative;
+    height: 450px;
+    background-image: url(../images/niagarabanner.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    object-fit: cover;
+    margin-top: 50px;
+    position: relative;
+    &::after {
+        position: absolute;
+        content: '';
+        background-color: rgba(0, 0, 0, 0.50);
+        height: 100%;
+        width: 100%;
+        inset: 0;
+        z-index: 0;
+    }
+}
+section.casinoramabanner {
+    position: relative;
+    height: 450px;
+    background-image: url(../images/casinoramabanner.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    object-fit: cover;
+    margin-top: 50px;
+    position: relative;
+    &::after {
+        position: absolute;
+        content: '';
+        background-color: rgba(0, 0, 0, 0.50);
+        height: 100%;
+        width: 100%;
+        inset: 0;
+        z-index: 0;
+    }
+}
+section.Monttremblantbanner {
+    position: relative;
+    height: 450px;
+    background-image: url(../images/monttremblantbanner.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    object-fit: cover;
+    margin-top: 50px;
+    position: relative;
+    &::after {
+        position: absolute;
+        content: '';
+        background-color: rgba(0, 0, 0, 0.50);
+        height: 100%;
+        width: 100%;
+        inset: 0;
+        z-index: 0;
+    }
+}
+section.fallsview-banner {
+    position: relative;
+    height: 450px;
+    background-image: url(../images/fallsviewbanner.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    object-fit: cover;
+    margin-top: 50px;
+    position: relative;
+    &::after {
+        position: absolute;
+        content: '';
+        background-color: rgba(0, 0, 0, 0.50);
+        height: 100%;
+        width: 100%;
+        inset: 0;
+        z-index: 0;
+    }
+}
+section.hardrock-banner {
+    position: relative;
+    height: 450px;
+    background-image: url(../images/hardrockbanner.jpeg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    object-fit: cover;
+    margin-top: 50px;
+    position: relative;
+    &::after {
+        position: absolute;
+        content: '';
+        background-color: rgba(0, 0, 0, 0.50);
+        height: 100%;
+        width: 100%;
+        inset: 0;
+        z-index: 0;
+    }
+}
+section.riverrockbanner {
+    position: relative;
+    height: 450px;
+    background-image: url(../images/riverrockbanner.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    object-fit: cover;
+    margin-top: 50px;
+    position: relative;
+    &::after {
+        position: absolute;
+        content: '';
+        background-color: rgba(0, 0, 0, 0.50);
+        height: 100%;
+        width: 100%;
+        inset: 0;
+        z-index: 0;
+    }
+}
+/*reviewsdetail-css-start*/
 
 /*footer-css-start*/
 .footer {
