--- a/scss/responsive.scss
+++ b/scss/responsive.scss
@@ -278,7 +278,9 @@
             text-align: justify;
         }
     }
-
+    .casinodetail-text p {
+        text-align: justify;
+    }
 }
 
 /*# sourceMappingURL=responsive.css.map */
