--- a/scss/style.scss
+++ b/scss/style.scss
@@ -660,6 +660,10 @@ section.riverrockbanner {
 }
 .casinodetail {
     padding: 50px 0;
+    background-image: url(../images/bodybg.png);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
     &-text{
         h3{
             font-size: 28px;
