--- a/scss/responsive.scss
+++ b/scss/responsive.scss
@@ -35,6 +35,7 @@
     .resturent-button {
         max-width: none;
     }
+
     .item {
         aspect-ratio: 1/0.7;
     }
@@ -43,6 +44,22 @@
 @media screen and (max-width: 991px) {
 
     /*header start*/
+    button.dropbtn.menu.active {
+        color: $clr-creme;
+    }
+
+    .dropdown-content {
+        min-width: 100%;
+    }
+
+    .dropbtn {
+        padding: 16px 0;
+    }
+
+    .site-header .site-nav ul li a.active {
+        color: $clr-creme;
+    }
+
     .site-nav {
         position: fixed;
         top: 0;
@@ -127,7 +144,7 @@
         color: #ffffff;
         position: relative;
         white-space: nowrap;
-        font-family: "Poppins";
+        font-family: 'Forum';
 
     }
 
@@ -198,14 +215,24 @@
 
         a {
             display: block;
-            color: #ffffff;
+            color: $clr-white;
             font-size: 16px;
             line-height: 32px;
             font-weight: 600;
             opacity: 0.7;
         }
     }
+    .dropdown-content {
+
+        background-color: $clr-creme;
+        min-width:220px;
+        a{
+            color: $clr-green;
+
+        }
+    }
 }
+
 
 @include mq(md) {
     .about_us_content {
@@ -213,7 +240,7 @@
         margin: 30px 0;
         width: 100%;
     }
-   
+
 }
 
 @media screen and (max-width:820px) {
@@ -228,6 +255,7 @@
             font-size: 21px;
         }
     }
+
     .item {
         aspect-ratio: 1;
     }
@@ -263,6 +291,7 @@
         display: flex;
         gap: 25px;
     }
+
     .item {
         aspect-ratio: auto;
     }
@@ -278,6 +307,7 @@
             text-align: justify;
         }
     }
+
     .casinodetail-text p {
         text-align: justify;
     }
