--- a/scss/style.scss
+++ b/scss/style.scss
@@ -90,6 +90,7 @@ header.site-header.sticky {
     display: inline-block;
     font-size: 17px;
     font-weight: 400;
+    color: $clr-green;
 
     &:hover {
         color: $clr-orange;
@@ -504,6 +505,7 @@ section.windsor-banner {
     object-fit: cover;
     margin-top: 50px;
     position: relative;
+
     &::after {
         position: absolute;
         content: '';
@@ -514,6 +516,7 @@ section.windsor-banner {
         z-index: 0;
     }
 }
+
 section.casinolacleamy-banner {
     position: relative;
     height: 450px;
@@ -524,6 +527,7 @@ section.casinolacleamy-banner {
     object-fit: cover;
     margin-top: 50px;
     position: relative;
+
     &::after {
         position: absolute;
         content: '';
@@ -534,6 +538,7 @@ section.casinolacleamy-banner {
         z-index: 0;
     }
 }
+
 section.niagara-banner {
     position: relative;
     height: 450px;
@@ -544,6 +549,7 @@ section.niagara-banner {
     object-fit: cover;
     margin-top: 50px;
     position: relative;
+
     &::after {
         position: absolute;
         content: '';
@@ -554,6 +560,7 @@ section.niagara-banner {
         z-index: 0;
     }
 }
+
 section.casinoramabanner {
     position: relative;
     height: 450px;
@@ -564,6 +571,7 @@ section.casinoramabanner {
     object-fit: cover;
     margin-top: 50px;
     position: relative;
+
     &::after {
         position: absolute;
         content: '';
@@ -574,6 +582,7 @@ section.casinoramabanner {
         z-index: 0;
     }
 }
+
 section.Monttremblantbanner {
     position: relative;
     height: 450px;
@@ -584,6 +593,7 @@ section.Monttremblantbanner {
     object-fit: cover;
     margin-top: 50px;
     position: relative;
+
     &::after {
         position: absolute;
         content: '';
@@ -594,6 +604,7 @@ section.Monttremblantbanner {
         z-index: 0;
     }
 }
+
 section.fallsview-banner {
     position: relative;
     height: 450px;
@@ -604,6 +615,7 @@ section.fallsview-banner {
     object-fit: cover;
     margin-top: 50px;
     position: relative;
+
     &::after {
         position: absolute;
         content: '';
@@ -614,6 +626,7 @@ section.fallsview-banner {
         z-index: 0;
     }
 }
+
 section.hardrock-banner {
     position: relative;
     height: 450px;
@@ -624,6 +637,7 @@ section.hardrock-banner {
     object-fit: cover;
     margin-top: 50px;
     position: relative;
+
     &::after {
         position: absolute;
         content: '';
@@ -634,6 +648,7 @@ section.hardrock-banner {
         z-index: 0;
     }
 }
+
 section.riverrockbanner {
     position: relative;
     height: 450px;
@@ -644,6 +659,7 @@ section.riverrockbanner {
     object-fit: cover;
     margin-top: 50px;
     position: relative;
+
     &::after {
         position: absolute;
         content: '';
@@ -654,18 +670,21 @@ section.riverrockbanner {
         z-index: 0;
     }
 }
+
 .resturent-button.new {
     margin: 0;
     padding: 25px 0;
 }
+
 .casinodetail {
     padding: 50px 0;
     background-image: url(../images/bodybg.png);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-    &-text{
-        h3{
+
+    &-text {
+        h3 {
             font-size: 28px;
             color: $clr-orange;
         }
@@ -921,6 +940,46 @@ button.submit-btn {
         color: $clr-creme !important;
     }
 
+}
+
+.dropbtn {
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: $clr-green;
+    min-width: 190px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: $clr-white;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+button.dropbtn.menu.active {
+    background: none;
+   
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.dropdown:hover .dropbtn {
+    background-color: #3e8e41;
 }
 
 /*contact-css-end*/
