--- a/scss/style.scss
+++ b/scss/style.scss
@@ -630,7 +630,7 @@ section.fallsview-banner {
 section.hardrock-banner {
     position: relative;
     height: 450px;
-    background-image: url(../images/hardrockbanner.jpeg);
+    background-image: url(../images/hardrockbanner.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
