--- a/scss/style.scss
+++ b/scss/style.scss
@@ -690,7 +690,10 @@ section.riverrockbanner {
         }
     }
 }
-
+.main-rate-star {
+    display: flex;
+    gap: 5px;
+}
 /*reviewsdetail-css-start*/
 
 /*footer-css-start*/
