--- a/scss/style.scss
+++ b/scss/style.scss
@@ -883,8 +883,8 @@ section.contact {
 
 .about_us_content {
     padding: 2rem;
-    margin: 30px 0;
     width: 50%;
+    margin: 0 auto;
 }
 
 .form-group {
@@ -984,7 +984,11 @@ button.dropbtn.menu.active {
 .dropdown:hover .dropbtn {
     background-color: #3e8e41;
 }
-
+section.contact__main h2 {
+    text-align: center;
+    margin: 30px 0;
+    font-size: 35px;
+}
 /*contact-css-end*/
 
 
