--- a/scss/style.scss
+++ b/scss/style.scss
@@ -130,7 +130,7 @@ section.banner-section {
     background-image: url(../images/homebanner.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: center;
+    background-position: bottom;
     object-fit: cover;
     margin-top: 50px;
     position: relative;
