--- a/scss/style.scss
+++ b/scss/style.scss
@@ -520,7 +520,7 @@ section.windsor-banner {
 section.casinolacleamy-banner {
     position: relative;
     height: 450px;
-    background-image: url(../images/casinodulacbanner.jpeg);
+    background-image: url(../images/casinodulacbanner.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -542,7 +542,7 @@ section.casinolacleamy-banner {
 section.niagara-banner {
     position: relative;
     height: 450px;
-    background-image: url(../images/niagarabanner.jpeg);
+    background-image: url(../images/niagarabanner.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
