--- a/css/style.css
+++ b/css/style.css
@@ -534,7 +534,7 @@ section.windsor-banner::after {
 section.casinolacleamy-banner {
   position: relative;
   height: 450px;
-  background-image: url(../images/casinodulacbanner.jpeg);
+  background-image: url(../images/casinodulacbanner.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -555,7 +555,7 @@ section.casinolacleamy-banner::after {
 section.niagara-banner {
   position: relative;
   height: 450px;
-  background-image: url(../images/niagarabanner.jpeg);
+  background-image: url(../images/niagarabanner.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
